--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-jQuery history event v0.3
-Copyright (c) 2011 Tom Rodenberg <tarodenberg gmail com>
-Licensed under the GPL (http://www.gnu.org/licenses/gpl.html) license.
+jQuery history event v0.4
+Copyright (c) 2014 Tom Rodenberg <tarodenberg gmail com>
+jQuery history event is released under two licenses: new BSD, and MIT. You may pick the
+license that best suits your development needs.
 
 Adds a history event to jQuery. Allows dynamic pages to create page states and easily recall them when user navigation occurs (such as the back button).
 
